# task-be-1-serverless-event-pipeline

./: .eslintrc.json  .funcignore  .gitignore  CLAUDE.md  MANUAL_TEST.md  PLAN.md  README.md  SPEC.md  function_app.py  host.json  jest.config.ts  local.settings.sample.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test-event.json  tsconfig.json
.claude/: settings.json
.github/workflows/: master_func-notification-pipeline.yml  release-1.0.0_func-notification-pipeline.yml
docs/: API.md  DATA_MODEL.md
postman/: Notification-Pipeline-E2E.postman_collection.json
rules/: git-workflow.md  security.md  testing.md  twelve-factor.md
rules/code-style/: python.md  typescript.md
scripts/: init-db.js  init-db.ts
skills/branch/: SKILL.md
skills/merge/: SKILL.md
skills/plan/: SKILL.md
skills/spec/: SKILL.md
src/: index.ts
src/functions/: dlq-api.ts  dlq_api.py  event-api.ts  event-consumer.ts  event_api.py  event_consumer.py  outbox-publisher.ts  outbox-retry.ts  outbox_publisher.py  outbox_retry.py
src/models/: circuit-breaker.ts  circuit_breaker.py  dlq.py  dlq.ts  events.py  events.ts  rate-limiter.ts  rate_limiter.py
src/services/: circuit-breaker.ts  circuit_breaker.py  cosmos-client.ts  cosmos_client.py  dlq-service.ts  dlq_service.py  log-store.ts  rate-limiter.ts  (+3 more)
templates/: CLAUDE.md  gitignore  settings-node.json  settings-python.json  settings.json
test-events/: test-event-all-channels.json  test-event-email-only.json  test-event-sms-only.json  test-event-webhook-only.json
tests/: conftest.py
(+74 files in other folders)
